Fixed capitalization in a preference string.

--- a/po/wesnoth/en_GB.po
+++ b/po/wesnoth/en_GB.po
@@ -200,8 +200,8 @@ msgstr "Joystick: deadzone of the scrolling stick"
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:223
 #| msgid "Joystick: number of the cursor X-axis joystick"
-msgid "Joystick: number of the cursor x-axis joystick"
-msgstr "Joystick: number of the cursor x-axis joystick"
+msgid "Joystick: number of the cursor X-axis joystick"
+msgstr "Joystick: number of the cursor X-axis joystick"
 
 #. [advanced_preference]: type=int
 #: data/advanced_preferences.cfg:233
