--- a/po/wesnoth/he.po
+++ b/po/wesnoth/he.po
@@ -223,7 +223,7 @@ msgstr "ג'ויסטיק: האיזור המת של הגלגלת"
 #: data/advanced_preferences.cfg:223
 #, fuzzy
 #| msgid "Joystick: number of the cursor X-axis joystick"
-msgid "Joystick: number of the cursor x-axis joystick"
+msgid "Joystick: number of the cursor X-axis joystick"
 msgstr "ג'ויסטיק: מספר ג'ויסטיק סמן ציר ה-X"
 
 #. [advanced_preference]: type=int
