--- a/po/wesnoth/id.po
+++ b/po/wesnoth/id.po
@@ -222,7 +222,7 @@ msgstr "Joystick:  Zona mati dari Stick Bergulir"
 #: data/advanced_preferences.cfg:223
 #, fuzzy
 #| msgid "Joystick: number of the cursor X-axis joystick"
-msgid "Joystick: number of the cursor x-axis joystick"
+msgid "Joystick: number of the cursor X-axis joystick"
 msgstr "Joystick: Jumlah Kursor Joystick sumbu-X "
 
 #. [advanced_preference]: type=int
