updated Galician translation

--- a/po/wesnoth-dw/gl.po
+++ b/po/wesnoth-dw/gl.po
@@ -4,7 +4,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-10-23 16:21+0200\n"
+"PO-Revision-Date: 2011-11-01 19:45+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -12,6 +12,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -627,24 +629,22 @@ msgstr "Imposíbel!"
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:444
 msgid "With their master gone, the undead are vanishing!"
-msgstr ""
+msgstr "Agora que morreu o seu amo, os non mortos esvaécense!"
 
 #. [unit]: type=Dread Bat, id=Fearsome Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:458
 msgid "Fearsome Bat"
-msgstr ""
+msgstr "Morcego temíbel"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:473
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "Look! There is a massive bat back here."
-msgstr "Mirade! Hai un morcego agochándose nesta esquina."
+msgstr "Mirade! Aquí atrás hai un morcego enorme."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:477
 msgid "Be courageous, and attack it anyway!"
-msgstr ""
+msgstr "Tes que ser valente. Atácao!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:481
@@ -652,38 +652,41 @@ msgid ""
 "But it isn’t attacking <i>me</i>. Do you think, with its master gone, it "
 "might desire a new one?"
 msgstr ""
+"O caso é que non parece que me queira mal. E se, agora que o seu amo morreu "
+"de verdade, busca alguén máis que se faga cargo del?"
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:485
 msgid ""
 "If it does not attack, we shall not kill it. Let us see if it follows us."
-msgstr ""
+msgstr "Se non nos ataca, non lle faremos mal. Vexamos se nos segue."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:491
 msgid "That is a mighty bat!"
-msgstr ""
+msgstr "Ese morcego é impresionante!"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:495
 msgid "It is no matter. I will destroy it immediately."
-msgstr ""
+msgstr "Dá igual, acabarei con el agora mesmo!"
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:499
 msgid ""
 "Hold a moment! Do you think, with its master gone, it might desire a new one?"
-msgstr ""
+msgstr "Agarda! Agora que acabamos co seu amo, pode que busque un novo."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:503
 msgid "If it does not attack, do not kill it. Let us see if it follows us."
-msgstr ""
+msgstr "Se non vos ataca, non lle fagades mal. Vexamos se nos segue."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:540
 msgid "With their master gone, the undead are fading away!"
 msgstr ""
+"Agora que o seu amo está morto definitivamente, os non mortos esváense!"
 
 #. [unit]: type=Vampire Bat, id=Friendly Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:555
@@ -692,10 +695,8 @@ msgstr "Morcego amistoso"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:570
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid "And look! There is a bat cowering in the corner here."
-msgstr "Mirade! Hai un morcego agochándose nesta esquina."
+msgstr "E mirade! Hai un morcego agochándose nesta esquina."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:574
@@ -748,33 +749,31 @@ msgstr "Parece que tes mascota, logo."
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:647
 msgid "With their master gone, the skeletons are crumbling!"
-msgstr ""
+msgstr "Agora que morreu o seu amo, os esqueletos desmorónanse!"
 
 #. [unit]: type=Walking Corpse, id=Undead Bat
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:660
-#, fuzzy
-#| msgid "Undead"
 msgid "Undead Bat"
-msgstr "Non mortos"
+msgstr "Morcego non morto"
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:669
-#, fuzzy
-#| msgid "Look! There is a bat cowering in the corner here."
 msgid ""
 "Look! There is a bat in the corner here. It is moving, but it looks half "
 "dead."
-msgstr "Mirade! Hai un morcego agochándose nesta esquina."
+msgstr ""
+"Mirade! Hai un morcego arrecunchado nesta esquina. Móvese, pero parece que "
+"estea medio morto."
 
 #. [message]: speaker=Gwabbo
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:678
 msgid "No, that thing is all the way dead."
-msgstr ""
+msgstr "Medio? Eu diría que enteiro."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:684
 msgid "Actually, I believe it is truly dead."
-msgstr ""
+msgstr "Pois creo que en realidade está completamente morto."
 
 #. [message]: speaker=Cylanna
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:690
@@ -782,25 +781,23 @@ msgid ""
 "I believe it is undead and has no will of its own, but the Kai may have the "
 "will power to direct it."
 msgstr ""
+"Creo que é un non morto, sen vontade de seu, pero pode que responda ante as "
+"ordes do cai."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:694
 msgid "Fascinating. I shall certainly try."
-msgstr ""
+msgstr "Interesante. Supoño que non perdo nada por intentalo."
 
 #. [message]: speaker=second_unit
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:706
-#, fuzzy
-#| msgid "Look, this chest was in his tent. It is filled with gold!"
 msgid "He had a chest in his tent, too. It is filled with gold!"
-msgstr "Mirade, este cofre estaba na tenda do maldito. E está repleto de ouro!"
+msgstr "Na súa tenda había tamén un cofre. E está repleto de ouro!"
 
 #. [message]: speaker=narrator
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:718
-#, fuzzy
-#| msgid "You receive 100 gold."
 msgid "You receive 120 gold."
-msgstr "Recibes 100 moedas de ouro."
+msgstr "Recibes 120 moedas de ouro."
 
 #. [message]: speaker=Kai Krellis
 #: data/campaigns/Dead_Water/scenarios/02_Flight.cfg:725
