--- a/po/wesnoth-help/gl.po
+++ b/po/wesnoth-help/gl.po
@@ -16,7 +16,7 @@ msgstr ""
 "Project-Id-Version: Wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-10-16 00:29+0200\n"
+"PO-Revision-Date: 2011-11-01 19:43+0100\n"
 "Last-Translator: Adrian Chaves Fernandez (Gallaecio) <adriyetichaves@gmail."
 "com>\n"
 "Language-Team: Galician <proxecto@trasno.net>\n"
@@ -24,6 +24,8 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"com>\n"
+"com>\n"
 "com>\n"
 "com>\n"
 "com>\n"
@@ -2559,12 +2561,6 @@ msgstr "Ferocidade"
 
 #. [topic]: id=traits_feral
 #: data/core/help.cfg:401
-#, fuzzy
-#| msgid ""
-#| "Dwellings of sentient beings are not easily used for cover by feral "
-#| "creatures of low intelligence. As a result, <italic>text='feral'</italic> "
-#| "units receive a maximum of 40% defense in any land-based village "
-#| "regardless of base terrain."
 msgid ""
 "Dwellings of sentient beings are not easily used for cover by feral "
 "creatures of low intelligence. As a result, <italic>text='feral'</italic> "
@@ -2573,7 +2569,7 @@ msgid ""
 msgstr ""
 "As criaturas <italic>text='feroces'</italic> de poucas luces teñen problemas "
 "para defenderse nas complexas moradas dos seres intelixentes. É por iso que "
-"estas unidades non reciben máis que un 40% de defensa nas vilas terrestres, "
+"estas unidades non reciben máis dun 50% de defensa nas vilas terrestres, "
 "independentemente do terreo sobre o que estean."
 
 #. [topic]: id=traits_loyal
