updated Indonesian translation

--- a/po/wesnoth-l/id.po
+++ b/po/wesnoth-l/id.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-07-09 09:00+0200\n"
-"PO-Revision-Date: 2011-10-25 13:18+0700\n"
+"PO-Revision-Date: 2011-11-02 12:29+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -2529,7 +2529,7 @@ msgid ""
 msgstr ""
 "Kadang-kadang para prajurit terkuat dan jenderal, dikutuk dengan kebencian "
 "dan kecemasan, datang kembali ke dunia ini sebagai Ksatria Kematian. Squire "
-"Kematian melayani mereka selagi menambah kekuatan najis untuk menjadi "
+"Kematian melayani mereka selagi menambah kekuatan kotor untuk menjadi "
 "Ksatria Kematian. Dalam proses itu mereka mengambil banyak kekuasaan "
 "Ksatria, termasuk kemampuan untuk memerintah bawahan."
 
@@ -2644,9 +2644,9 @@ msgid ""
 "their skeletal horses were raised from the grave by unholy magic to spread "
 "fear and destruction."
 msgstr ""
-"Setelah prajurit besar berderap di dataran, pengendara ini dipasang di atas "
-"kuda-kuda rangka mereka dibangkitkan dari kubur dengan sihir najis untuk "
-"menyebarkan ketakutan dan kehancuran."
+"Dulunya prajurit-prajurit hebat berderap di dataran, pengendara ini "
+"menunggang di atas kuda-kuda rangka mereka dibangkitkan dari kubur dengan "
+"sihir kotor untuk menyebarkan ketakutan dan kehancuran."
 
 #. [unit_type]: id=Thug_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:20
@@ -2733,7 +2733,7 @@ msgid ""
 "human and otherwise, that prowl the Wesnoth countryside at night."
 msgstr ""
 "Penjaga adalah laki-laki dan perempuan yang melindungi desa dari perampok, "
-"baik manusia dan sebaliknya, berkeliling mencari mangsa di daerah pedesaan "
+"baik manusia dan lainnya, yang berkeliling mencari mangsa di daerah pedesaan "
 "Wesnoth pada malam hari."
 
 #. [female]
@@ -2784,7 +2784,7 @@ msgstr ""
 #. [unit_type]: id=Trapper_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:206
 msgid "Peasant Trapper"
-msgstr "Petani Trapper"
+msgstr "Petani Penjebak"
 
 #. [unit_type]: id=Trapper_Peasant
 #: data/campaigns/Liberty/units/Villagers.cfg:210
@@ -2793,8 +2793,8 @@ msgid ""
 "Their hunting experience makes them most valuable at night and in forests "
 "and swamps."
 msgstr ""
-"Trappers adalah pemburu terampil yang memasok makanan dan pakaian dari bulu "
-"binatang untuk beberapa desa. pengalaman berburu mereka membuat mereka "
+"Para Penjebak adalah pemburu terampil yang memasok makanan dan pakaian dari "
+"bulu binatang untuk beberapa desa. Pengalaman berburu mereka membuat mereka "
 "paling berharga di malam hari dan di hutan dan rawa-rawa."
 
 #. [unit_type]: id=Huntsman_Peasant
