--- a/po/wesnoth-sotbe/id.po
+++ b/po/wesnoth-sotbe/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-07 22:09+0200\n"
-"PO-Revision-Date: 2011-08-18 14:11+0700\n"
+"POT-Creation-Date: 2011-10-31 21:12+0100\n"
+"PO-Revision-Date: 2011-11-02 13:51+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -4887,7 +4887,7 @@ msgstr ""
 #. [unit_type]: id=Watch Tower, race=mechanical
 #: data/campaigns/Son_Of_The_Black_Eye/units/Watch_Tower.cfg:4
 msgid "Watch Tower"
-msgstr "Tower Pengamatan"
+msgstr "Tower Pengamat"
 
 #. [unit_type]: id=Watch Tower, race=mechanical
 #: data/campaigns/Son_Of_The_Black_Eye/units/Watch_Tower.cfg:34
@@ -4895,7 +4895,7 @@ msgid ""
 "Watch Towers are good places from which to spot enemies and then shoot "
 "miscellaneous items at them with ballistas."
 msgstr ""
-"Tower Pengamatan adalah tempat yang bagus untuk melihat musuh dan kemudian "
+"Tower Pengamat adalah tempat yang bagus untuk melihat musuh dan kemudian "
 "menembakkan bermacam-macam hal pada mereka dengan ballista."
 
 #. [attack]: type=pierce
