--- a/po/wesnoth-trow/id.po
+++ b/po/wesnoth-trow/id.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.3-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-08-27 10:14+0200\n"
-"PO-Revision-Date: 2011-08-21 23:02+0700\n"
+"POT-Creation-Date: 2011-10-31 21:12+0100\n"
+"PO-Revision-Date: 2011-11-02 16:45+0700\n"
 "Last-Translator: Yuris <yuris_wicaksana@yahoo.com>\n"
 "Language-Team: none\n"
 "Language: \n"
@@ -7076,7 +7076,7 @@ msgstr "latihan pedang"
 #. [unit_type]: id=Vampire Lady, race=undead
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Vampire_Lady.cfg:4
 msgid "female^Vampire Lady"
-msgstr "Perempuan^Nyonya Vampir "
+msgstr "Nyonya Vampir "
 
 #. [unit_type]: id=Vampire Lady, race=undead
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Vampire_Lady.cfg:20
@@ -7117,7 +7117,7 @@ msgstr ""
 #. [unit_type]: id=Wesfolk Lady, race=human
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Lady.cfg:4
 msgid "female^Wesfolk Lady"
-msgstr "perempuan^Nyonya Wesfolk "
+msgstr "Nyonya Wesfolk "
 
 #. [unit_type]: id=Wesfolk Leader, race=human
 #. [unit_type]: id=Wesfolk Lady, race=human
@@ -7131,11 +7131,11 @@ msgid ""
 "which continues increasing with time, as does her natural leadership."
 msgstr ""
 "Lahir di kaum ningrat Wesfolk, ia dan bangsanya dikeluarkan dari masyarakat "
-"oleh tuan mereka, yang mengkhianati kesetiaan mereka ketika sebuah perang "
-"melawan orang-orang Haldric itu kalah. Orang buangan ini masih melestarikan "
-"keluhuran di pembuluh darahnya dan di medan perang  ia telah menerima "
-"pengalaman berharga, yang terus meningkat bersama waktu, seperti halnya "
-"sifat kepemimpinannya."
+"oleh penguasa-penguasa mereka, yang mengkhianati kesetiaan mereka ketika "
+"sebuah perang melawan orang-orang Haldric itu kalah. Orang buangan ini masih "
+"melestarikan keluhuran di pembuluh darahnya dan di medan perang  ia telah "
+"menerima pengalaman berharga, yang terus meningkat bersama waktu, seperti "
+"halnya sifat kepemimpinannya."
 
 #. [attack]: type=impact
 #: data/campaigns/The_Rise_Of_Wesnoth/units/Wesfolk_Lady.cfg:98
