--- a/po/wesnoth-nr/ja.po
+++ b/po/wesnoth-nr/ja.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-04-07 18:55+0900\n"
+"PO-Revision-Date: 2011-11-05 08:26+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
 "Language: Japanese\n"
@@ -2011,7 +2011,7 @@ msgstr "Hettel"
 #. [side]: type=Death Knight, id=Tervor
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:103
 msgid "Tervor"
-msgstr ""
+msgstr "Tervor"
 
 #. [side]: type=Death Knight, id=Author
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:127
@@ -3197,17 +3197,13 @@ msgstr "失礼した。それで、今は一体何年なんだ？"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2176
-#, fuzzy
-#| msgid "Uh... 534YW..."
 msgid "Uh... 534..."
-msgstr "ン……Wesnoth 歴 534 年……"
+msgstr "ン……534年……"
 
 #. [message]: speaker=Abhai
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2180
-#, fuzzy
-#| msgid "Huh?! Can’t be, the last year I remember it was 14,318AD!"
 msgid "Huh?! Can’t be, the last year I remember it was 14,318!"
-msgstr "ハァ！？ 有り得ん、私が最後に記憶していたのは 西暦 14,318 年だ！"
+msgstr "ハァ！？ 有り得ん、私が最後に記憶していたのは 14,318年だ！"
 
 #. [message]: speaker=Tallin
 #: data/campaigns/Northern_Rebirth/scenarios/05a_The_Pursuit.cfg:2184
