--- a/po/wesnoth-httt/ja.po
+++ b/po/wesnoth-httt/ja.po
@@ -11,18 +11,16 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: 1.8.5\n"
+"Project-Id-Version: 1.9+svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2011-04-11 22:13+0900\n"
+"PO-Revision-Date: 2011-11-05 08:03+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
 "Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
 "Language: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Poedit-Bookmarks: 297,-1,-1,-1,-1,-1,-1,-1,-1,-1\n"
-"X-Poedit-Basepath: C:\\Program Files\\Battle for Wesnoth 1.9.2\n"
 
 #. [campaign]: id=Heir_To_The_Throne
 #: data/campaigns/Heir_To_The_Throne/_main.cfg:11
@@ -3516,7 +3514,7 @@ msgstr "Halgar Du’nar"
 #. [side]: type=Orcish Warrior, id=Gorlak
 #: data/campaigns/Heir_To_The_Throne/scenarios/12_Northern_Winter.cfg:112
 msgid "Gorlak"
-msgstr ""
+msgstr "Gorlak"
 
 # 恐らく、ここに留まってしばらく休むべきです。
 #. [message]: speaker=Konrad
