--- a/po/wesnoth-tsg/ja.po
+++ b/po/wesnoth-tsg/ja.po
@@ -5,17 +5,17 @@
 # Automatically generated, 2006.
 # naoki iimura <amatubu@gmail.com>, 2006-2008.
 # Nobuhito Okada <okyada@gmail.com>, 2006.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: wescamp-i 18n\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2011-10-17 23:28+0200\n"
-"PO-Revision-Date: 2010-11-21 13:49+0900\n"
+"POT-Creation-Date: 2011-10-31 21:12+0100\n"
+"PO-Revision-Date: 2011-11-05 08:31+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
-"Language-Team: Japanese Translation Team\n"
-"Language: \n"
+"Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
+"Language: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -268,11 +268,6 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/scenarios/01_Born_to_the_Banner.cfg:208
-#, fuzzy
-#| msgid ""
-#| "Whenever you see a target that looks like this, you should move your "
-#| "leader (or whatever unit the dialogue just suggested) onto the hex that "
-#| "contains it."
 msgid ""
 "Whenever you see a target that looks like this, you should move your leader "
 "(or whatever unit the dialog just suggested) onto the hex that contains it."
@@ -1089,7 +1084,7 @@ msgstr ""
 #. [message]: speaker=narrator
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:230
 msgid "You may now recruit Cavalrymen."
-msgstr ""
+msgstr "これで竜騎兵を雇うことができます。"
 
 #. [message]: speaker=unit
 #: data/campaigns/The_South_Guard/scenarios/03_A_Desparate_Errand.cfg:248
