--- a/po/wesnoth-tutorial/ja.po
+++ b/po/wesnoth-tutorial/ja.po
@@ -5,17 +5,17 @@
 # Automatically generated, 2005.
 # naoki iimura <amatubu@gmail.com>, 2006-2008.
 # Nobuhito Okada <okyada@gmail.com>, 2006.
-# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010.
+# IWAI, Masaharu <iwaim.sub@gmail.com>, 2010-2011.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.9-svn\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-10-31 21:12+0100\n"
-"PO-Revision-Date: 2010-10-20 18:52+0900\n"
+"PO-Revision-Date: 2011-11-05 07:36+0900\n"
 "Last-Translator: IWAI, Masaharu <iwaim.sub@gmail.com>\n"
-"Language-Team: Japanese Translation Team\n"
-"Language: \n"
+"Language-Team: <wesnoth-ja-translate@lists.sourceforge.jp>\n"
+"Language: Japanese\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -1662,12 +1662,6 @@ msgstr "<big>一日の時間帯</big>"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1227
-#, fuzzy
-#| msgid ""
-#| "\n"
-#| "After this dialog, hold the mouse over the landscape image above the "
-#| "minimap on the right. This brings up a description of the time of day, "
-#| "showing who has the advantage."
 msgid ""
 "\n"
 "After this dialog, hold the mouse over the landscape image below the minimap "
@@ -1675,9 +1669,9 @@ msgid ""
 "has the advantage."
 msgstr ""
 "\n"
-"このダイアログを閉じたあと、右側の地図のそばにある風景画像の上にマウスカーソ"
-"ルを置いてみてください。時刻についての詳細を確認でき、誰が有利になるのかを見"
-"ることができます。"
+"このダイアログを閉じたあと、右側の地図の下にある風景画像の上にマウスカーソル"
+"を置いてみてください。時刻についての詳細を確認でき、誰が有利になるのかを見る"
+"ことができます。"
 
 #. [event]
 #: data/campaigns/tutorial/scenarios/2_Tutorial.cfg:1234
