Updated the British English translation.

--- a/po/wesnoth-lib/en_GB.po
+++ b/po/wesnoth-lib/en_GB.po
@@ -7,7 +7,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-10-31 16:31-0500\n"
+"PO-Revision-Date: 2011-11-07 15:51-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -1998,10 +1998,9 @@ msgstr "Side"
 
 #. [label]: id=nick_title
 #: data/gui/default/window/mp_change_control.cfg:73
-#, fuzzy
 #| msgid "Nick"
 msgid "Nickname"
-msgstr "Nick"
+msgstr "Nickname"
 
 #. [label]
 #: data/gui/default/window/mp_change_control.cfg:194
@@ -2883,10 +2882,9 @@ msgid "Advanced section^Advanced"
 msgstr "Advanced"
 
 #: src/game_preferences_display.cpp:1292
-#, fuzzy
 #| msgid "Choose theme"
 msgid "Choose Theme"
-msgstr "Choose theme"
+msgstr "Choose Theme"
 
 #: src/game_preferences_display.cpp:1307
 msgid "New theme will take effect on next new or loaded game."
@@ -3748,7 +3746,6 @@ msgid "This hotkey is already in use."
 msgstr "This hotkey is already in use."
 
 #: src/preferences_display.cpp:429
-#, fuzzy
 #| msgid ""
 #| "Screenshot hotkeys cannot be combined with the Control, Alt or Meta "
 #| "modifiers."
@@ -3756,8 +3753,8 @@ msgid ""
 "Screenshot hotkeys should be combined with the Control, Alt or Meta "
 "modifiers to avoid problems."
 msgstr ""
-"Screenshot hotkeys cannot be combined with the Control, Alt or Meta "
-"modifiers."
+"Screenshot hotkeys should be combined with the Control, Alt or Meta "
+"modifiers to avoid problems."
 
 #: src/preferences_display.cpp:429
 msgid "Warning"
