--- a/po/wesnoth-multiplayer/en_GB.po
+++ b/po/wesnoth-multiplayer/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-10-17 17:53-0500\n"
+"PO-Revision-Date: 2011-11-07 15:50-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -85,10 +85,9 @@ msgstr "Undead"
 
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:4
-#, fuzzy
 #| msgid "2p — The Freelands"
 msgid "2p — Aethermaw"
-msgstr "2p — The Freelands"
+msgstr "2p — Æthermaw"
 
 #. [multiplayer]: id=multiplayer_Aethermaw
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:5
@@ -106,6 +105,18 @@ msgid ""
 "herself by arranging battles between the mortal beings unlucky enough to be "
 "drawn into its depths. Designed by Doc Paterson."
 msgstr ""
+"Long ago, the Great Mage Sulla was imprisoned in the Æthermaw, a nexus of "
+"mystical energy whose chaotic nature was able to prevent her escape. Over "
+"the centuries, however, Sulla gradually attuned her powers to the maelstrom "
+"of disorder that is the Æthermaw, and has now begun to project its influence "
+"onto the material plane, drawing in entire regions of land from hundreds of "
+"different worlds, realities and time-periods. She experiments with these "
+"disparate pieces of the cosmos, manipulating them, merging them and sending "
+"them back and forth between the Æthermaw and their place of origin. Perhaps, "
+"as her mastery over the Æthermaw grows, Sulla will one day break free of its "
+"bonds. Until that time comes, she will continue to amuse herself by "
+"arranging battles between the mortal beings unlucky enough to be drawn into "
+"its depths. Designed by Doc Paterson."
 
 #. [side]
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:21
@@ -169,10 +180,9 @@ msgstr "South"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:276
-#, fuzzy
 #| msgid "A strange place. Designed by Doc Paterson"
 msgid "Aethermaw — Created by Doc Paterson"
-msgstr "A strange place. Designed by Doc Paterson"
+msgstr "Æthermaw — Created by Doc Paterson"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:291
@@ -192,12 +202,26 @@ msgid ""
 "unite the two halves of the battlefield. The process will be complete by the "
 "end of turn 6.</span>\n"
 msgstr ""
+"The Great Mage Sulla has transported your armies to this bizarre nexus, and "
+"demands that you amuse her by doing battle.\n"
+"\n"
+"\n"
+"\n"
+"\n"
+"<span color='red'>Note:</span>\n"
+"\n"
+"<span color='green'>Units may not move into a hex with a rock cairn. They "
+"may, however, be recruited to, and move from, such hexes.</span>\n"
+"\n"
+"<span color='green'>Beginning on turn 4, the Great Mage Sulla will begin to "
+"unite the two halves of the battlefield. The process will be complete by the "
+"end of turn 6.</span>\n"
 
 #. [message]: speaker=narrator
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:304
 #: data/multiplayer/scenarios/2p_Aethermaw.cfg:321
 msgid "The Aethermaw growls."
-msgstr ""
+msgstr "The Æthermaw growls."
 
 #. [multiplayer]: id=multiplayer_Arcanclave_Citadel
 #: data/multiplayer/scenarios/2p_Arcanclave_Citadel.cfg:6
