--- a/po/wesnoth-units/en_GB.po
+++ b/po/wesnoth-units/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-08-10 14:02-0500\n"
+"PO-Revision-Date: 2011-11-07 15:51-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -25,7 +25,6 @@ msgstr ""
 #. [unit_type]: id=Dwarvish Masked Dragonguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Dragonguard.cfg:18
 #: data/core/units/dwarves/Dragonguard.cfg:20
-#, fuzzy
 #| msgid ""
 #| "It is not clear why the Dragonguards are called what they are, a name "
 #| "given by their dwarven brethren. Some speculate that the name comes from "
@@ -47,7 +46,7 @@ msgid ""
 msgstr ""
 "It is not clear why the Dragonguards are called what they are, a name given "
 "by their dwarven brethren. Some speculate that the name comes from their "
-"weapon of choice, these strange staffs that belch fire and death. Others "
+"weapon of choice, these strange staves that belch fire and death. Others "
 "have surmised that it is because such weapons would be a threat against even "
 "a true Dragon, should such a thing be seen again in the known world. "
 "Whatever the case, it is for these weapons that the guardians of the great "
@@ -264,7 +263,6 @@ msgstr "thunderstick"
 #. [unit_type]: id=Dwarvish Masked Thunderguard, race=dwarf
 #: data/campaigns/The_Hammer_of_Thursagan/units/Dwarvish_Masked_Thunderguard.cfg:21
 #: data/core/units/dwarves/Thunderguard.cfg:21
-#, fuzzy
 #| msgid ""
 #| "The Dwarven Thunderguards are famed for their curious weaponry, these "
 #| "strange staffs of wood and iron that make a thunderous noise in their "
@@ -290,7 +288,7 @@ msgid ""
 "prepare, the results are seen by the Dwarves as being well worth the wait."
 msgstr ""
 "The Dwarven Thunderguards are famed for their curious weaponry, these "
-"strange staffs of wood and iron that make a thunderous noise in their anger. "
+"strange staves of wood and iron that make a thunderous noise in their anger. "
 "The machinations behind this weaponry are a mystery, a secret taken to the "
 "grave by the dwarves of Knalga who wield them, and are assumed to have even "
 "forged them. The most that is known are reports of dwarves pouring a strange "
