--- a/po/wesnoth-help/en_GB.po
+++ b/po/wesnoth-help/en_GB.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: en_GB\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2011-11-07 17:23+0100\n"
-"PO-Revision-Date: 2011-10-31 16:34-0500\n"
+"PO-Revision-Date: 2011-11-07 15:52-0500\n"
 "Last-Translator: Steven Panek (Espreon) <Majora700@gmail.com>\n"
 "Language-Team: English (British) <http://wiki.wesnoth.org/"
 "EnglishGBTranslation>\n"
@@ -673,7 +673,6 @@ msgstr "Morogor"
 
 #. [topic]: id=morogor
 #: data/core/encyclopedia/geography.cfg:40
-#, fuzzy
 #| msgid ""
 #| "Archipelago, located somewhere in the <ref>dst='great_ocean' text='Great "
 #| "ocean'</ref> west of the <ref>dst='green_isle' text='Green Isle'</ref> "
@@ -688,7 +687,7 @@ msgid ""
 "The central island of the archipelago is also called ‘Morogor’."
 msgstr ""
 "Archipelago, located somewhere in the <ref>dst='great_ocean' text='Great "
-"ocean'</ref> west of the <ref>dst='green_isle' text='Green Isle'</ref> and "
+"Ocean'</ref> west of the <ref>dst='green_isle' text='Green Isle'</ref> and "
 "east of the <ref>dst=old_continent text='Old Continent'</ref>.\n"
 "It is mostly inhabited by <ref>dst='..race_drake' text='drakes'</ref>.\n"
 "The central island of the archipelago is also called ‘Morogor’."
@@ -700,14 +699,13 @@ msgstr "Green Isle"
 
 #. [topic]: id=green_isle
 #: data/core/encyclopedia/geography.cfg:46
-#, fuzzy
 #| msgid ""
 #| "A bigger island lying in the <ref>dst='great_ocean' text='great ocean'</"
 #| "ref>."
 msgid ""
 "A bigger island lying in the <ref>dst='great_ocean' text='Great Ocean'</ref>."
 msgstr ""
-"A bigger island lying in the <ref>dst='great_ocean' text='great ocean'</ref>."
+"A bigger island lying in the <ref>dst='great_ocean' text='Great Ocean'</ref>."
 
 #. [topic]: id=old_continent
 #: data/core/encyclopedia/geography.cfg:51
@@ -716,7 +714,6 @@ msgstr "Old Continent"
 
 #. [topic]: id=old_continent
 #: data/core/encyclopedia/geography.cfg:52
-#, fuzzy
 #| msgid ""
 #| "Lies to the west of <ref>dst='morogor' text='Morogor'</ref> across the "
 #| "<ref>dst='Great Ocean' text='Great Ocean'</ref>."
@@ -725,7 +722,7 @@ msgid ""
 "<ref>dst='great_ocean' text='Great Ocean'</ref>."
 msgstr ""
 "Lies to the west of <ref>dst='morogor' text='Morogor'</ref> across the "
-"<ref>dst='Great Ocean' text='Great Ocean'</ref>."
+"<ref>dst='great_ocean' text='Great Ocean'</ref>."
 
 #. [topic]: id=great_continent
 #: data/core/encyclopedia/geography.cfg:57
@@ -3562,7 +3559,6 @@ msgstr ""
 # 2 full stops
 #. [topic]: id=mp_commands
 #: data/core/help.cfg:838
-#, fuzzy
 #| msgid ""
 #| "\n"
 #| "Change the controller for side (write here the number of the side) to "
@@ -3584,11 +3580,11 @@ msgid ""
 msgstr ""
 "\n"
 "Change the controller for side (write here the number of the side) to "
-"username (write here the nick of the player or observer). You can check what "
-"side belongs to which player in the <bold>text='Scenario Settings'</bold> "
-"dialog (Press the <bold>text='More'</bold> button in the <bold>text='Status "
-"Table'</bold> (alt+s by default) to get there.). The host can change control "
-"of any side.\n"
+"username (write here the nickname of the player or observer). You can check "
+"what side belongs to which player in the <bold>text='Scenario Settings'</"
+"bold> dialog (Press the <bold>text='More'</bold> button in the "
+"<bold>text='Status Table'</bold> (alt+s by default) to get there.). The host "
+"can change control of any side.\n"
 "\n"
 
 #. [topic]: id=mp_commands
